--- a/prac2.css
+++ b/prac2.css
@@ -74,11 +74,11 @@ span.red-outline {
 
 #redborder-r8 {
     border: 1px solid red;
-    border-radius: 8;
+    border-radius: 8px;
     border-bottom: hidden;
 }
 
 #blueborder-r8 {
     border: 1px solid blue;
-    border-radius: 8;
+    border-radius: 8px;
 }
