--- a/prac2.css
+++ b/prac2.css
@@ -3,6 +3,9 @@ body {
     background-image: url("./cross.png");
 }
 
+hr {
+    border-top: 1px solid #CFDFE4;
+}
 h1 {
     font-family: sans-serif;
 }
@@ -55,7 +58,7 @@ span.fancy {
     font-family: cursive;
 }
 
-span.redborder {
+span.red-border {
     border: 1px solid red;
 }
 
