--- a/prac2.css
+++ b/prac2.css
@@ -111,7 +111,7 @@ span.red-outline {
     padding: 12px;
     width: 376px;
     height: 376px;
-    /* margin: auto; */
+    margin: auto;
 }
 
 #blue2 {
