--- a/prac2.css
+++ b/prac2.css
@@ -6,6 +6,7 @@ body {
 hr {
     border-top: 1px solid #CFDFE4;
 }
+
 h1 {
     font-family: 'Raleway', sans-serif;
 }
@@ -16,7 +17,7 @@ h2 {
 }
 
 h3 {
-    color: rgba(0,0,139,0.8);
+    color: rgba(0, 0, 139, 0.8);
 }
 
 h4 {
@@ -44,7 +45,7 @@ pre {
 }
 
 .transparent-text {
-    color:rgba(0,0,0,0.5);
+    color: rgba(0, 0, 0, 0.5);
 }
 
 mark {
@@ -79,8 +80,8 @@ span.red-outline {
     border: 1px solid red;
 }
 
-#blueborder{
-    border:1px solid blue;
+#blueborder {
+    border: 1px solid blue;
 }
 
 #redborder-r8 {
@@ -130,13 +131,14 @@ span.red-outline {
 
 #multi-line {
     quotes: " " " ";
-    color: dimgray;
+    color: dimgrey;
     line-height: 1.5;
     word-spacing: 0.2em;
     text-align: justify;
     font-family: 'Raleway', serif;
 }
 
-#BFCFD4 * {
+#BFCFD4 {
     color: #BFCFD4;
+    text-align: center;
 }
