--- a/prac2.css
+++ b/prac2.css
@@ -142,3 +142,10 @@ span.red-outline {
     color: #BFCFD4;
     text-align: center;
 }
+/* .fa-brands {
+    color: #BFCFD4;
+}
+
+.fa-solid {
+    color: #BFCFD4;
+} */
