--- a/prac2.css
+++ b/prac2.css
@@ -66,7 +66,10 @@ div.floatleft {
     margin:auto;
 }
 
-div.
+div.redbox {
+    width: 600px;
+    height: 100px;
+}
 
 span.blue {
     color: blue;
