--- a/prac2.css
+++ b/prac2.css
@@ -67,8 +67,13 @@ div.floatleft {
 }
 
 div.redbox {
+    background-color: white;
+    border: solid darkgrey;
+    border-radius: 8px;
+    padding: 1em;
     width: 600px;
     height: 100px;
+    margin:auto;
 }
 
 span.blue {
