--- a/prac2.css
+++ b/prac2.css
@@ -66,7 +66,7 @@ div.floatleft {
     margin:auto;
 }
 
-div.redbox {
+div.rightbox {
     background-color: white;
     border: solid darkgrey;
     border-radius: 8px;
@@ -74,7 +74,12 @@ div.redbox {
     margin:auto;
     width: 600px;
     height: 100px;
- 
+}
+
+div.redbox {
+    width: 1000px;
+    height: 100px;
+    margin: 1px solid red;
 }
 
 span.blue {
