--- a/prac2.css
+++ b/prac2.css
@@ -82,6 +82,7 @@ div.redbox {
     outline: 1px solid red;
     overflow: hidden;
     margin: 100px 0px 0px 100px;
+    position: center;
 }
 
 span.blue {
