--- a/prac2.css
+++ b/prac2.css
@@ -68,7 +68,8 @@ div.floatleft {
 }
 
 div.rightbox {
-    margin-left: 10px;
+    position: relative;
+    left: 410px;
     background-color: white;
     border: solid darkgrey;
     border-radius: 8px;
