--- a/prac2.css
+++ b/prac2.css
@@ -68,8 +68,8 @@ div.floatleft {
 }
 
 div.rightbox {
-    position: relative;
-    left: 510px;
+    /* position: relative;
+    left: 510px; */
     background-color: white;
     border: solid darkgrey;
     border-radius: 8px;
