--- a/prac2.css
+++ b/prac2.css
@@ -65,11 +65,12 @@ div.floatleft {
     overflow: scroll;
     margin: auto;
     height: 400px;
+    width: 180px;
 }
 
 div.rightbox {
-    /* position: relative;
-    left: 510px; */
+    position: relative;
+    left: 230px;
     background-color: white;
     border: solid darkgrey;
     border-radius: 8px;
