--- a/prac2.css
+++ b/prac2.css
@@ -76,7 +76,7 @@ div.rightbox {
     border-radius: 8px;
     padding: 1em;
     height: 400px;
-    /* margin: auto; */
+width: 10;
 }
 
 div.redbox {
