--- a/prac2.css
+++ b/prac2.css
@@ -70,13 +70,13 @@ div.floatleft {
 
 div.rightbox {
     position: relative;
-    left: 230px;
+    left: 10px;
     background-color: white;
     border: solid darkgrey;
     border-radius: 8px;
     padding: 1em;
     height: 400px;
-width: 10;
+    overflow-x: hidden;
 }
 
 div.redbox {
